--- a/src/Hairday/Views/Shared/_Layout.cshtml
+++ b/src/Hairday/Views/Shared/_Layout.cshtml
@@ -9,40 +9,45 @@
     <link rel="stylesheet" href="~/Hairday.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
-</head>
+@* </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Hairday</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
+    <header class="header-black">
+        <div class="img-logo">
+            <img class="logo-img" src="~/img/logo.png">
+        </div>
+        <nav class="nav-links">
+            <div class="nav-link">
+                <a href="#">Homepage</a>
+            </div>
+            <div class="nav-link">
+                <a href="#">Cabelo</a>
+            </div>
+            <div class="nav-link">
+                <a href="#">Barba</a>
+            </div>
+            <div class="nav-link">
+                <a href="#">SPA</a>
+            </div>
+            <div class="nav-link">
+                <a href="#">Sobrancelha</a>
+            </div>
+            <div class="nav-link">
+                <a href="#">Massagem</a>
             </div>
         </nav>
+        <div class="login-link">
+            <a href="#">Login</a>
+        </div>
     </header>
+<body> *@
+  
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2025 - Hairday - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+  
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
