--- a/src/Hairday/wwwroot/css/cabecalhoBarbeiro.css
+++ b/src/Hairday/wwwroot/css/cabecalhoBarbeiro.css
@@ -1,4 +1,4 @@
-﻿/*﻿*,
+﻿﻿*,
 *:after,
 *:before {
     margin: 0;
@@ -38,4 +38,4 @@
     text-decoration: none;
     font-family: Inter;
     padding-right: 34px;
-}*/
+}
