atualizacao pagina cliente

--- a/src/Hairday/Views/Shared/_LayoutCliente.cshtml
+++ b/src/Hairday/Views/Shared/_LayoutCliente.cshtml
@@ -42,11 +42,9 @@
         </div>
     </header>
  
-    <div>
-        <main role="main">
-            @RenderBody()
-        </main>
-    </div>
+    <main id="main-content" role="main">
+        @RenderBody()
+    </main>
 
   
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
