Adicionando a pagina do cadastro da barbearia

--- a/src/Hairday/Views/Home/Index.cshtml
+++ b/src/Hairday/Views/Home/Index.cshtml
@@ -20,9 +20,7 @@
             </div>
             <div class="login-container">
                 <a class="login-text" asp-controller="Account" asp-action="Login" class="nav-link">Login / Casdastro</a>
-                <button id="cadastroBarbeariaId" class="btn-barbearia">
-                    Cadastre sua barbearia
-                </button>
+                <a id="cadastroBarbeariaId" class="btn-barbearia" asp-controller="Barbearia" asp-action="Create">Cadastre sua Barbearia</a>
             </div>
         </div>
 
