--- a/src/Hairday/Views/Home/Index.cshtml
+++ b/src/Hairday/Views/Home/Index.cshtml
@@ -19,10 +19,10 @@
                 <img src="~/Assets/HairDay Logo.png" alt="Logo HairDay" class="header-logo">
             </div>
             <div class="login-container">
-                <a class="login-text" asp-controller="Account" asp-action="Login" class="nav-link">Login / Cadastro</a>
-                <button id="cadastroBarbeariaId" class="btn-barbearia">
-                    Cadastre sua barbearia
-                </button>
+                <a class="login-text" asp-controller="Account" asp-action="Login" class="nav-link">Login</a>               
+                    <a asp-controller="Barbearia" asp-action="Create" class="btn-barbearia">
+                        Cadastre sua barbearia
+                    </a>                
             </div>
         </div>
 
