--- a/src/Hairday/Views/Shared/_LayoutCliente.cshtml
+++ b/src/Hairday/Views/Shared/_LayoutCliente.cshtml
@@ -19,26 +19,26 @@
         </div>
         <nav class="nav-links">
             <div class="nav-link">
-                <a href="../Home/Index">Homepage</a>
+                <a asp-controller="Home" asp-action="Index">Homepage</a>
             </div>
             <div class="nav-link">
-                <a href="../Home/FiltrarPorCabelo">Cabelo</a>
+                <a asp-controller="Home" asp-action="FiltrarPorCabelo">Cabelo</a>
             </div>
             <div class="nav-link">
-                <a href="../Home/FiltrarPorBarba">Barba</a>
+                <a asp-controller="Home" asp-action="FiltrarPorBarba">Barba</a>
             </div>
             <div class="nav-link">
-                <a href="../Home/FiltrarPorSpa">SPA</a>
+                <a asp-controller="Home" asp-action="FiltrarPorSpa">SPA</a>
             </div>
             <div class="nav-link">
-                <a href="../Home/FiltrarPorSobrancelha">Sobrancelha</a>
+                <a asp-controller="Home" asp-action="FiltrarPorSobrancelha">Sobrancelha</a>
             </div>
             <div class="nav-link">
-                <a href="../Home/FiltrarPorMassagem">Massagem</a>
+                <a asp-controller="Home" asp-action="FiltrarPorMassagem">Massagem</a>
             </div>
         </nav>
         <div class="login-link">
-            <a href="../Account/Login">Login</a>
+            <a asp-controller="Account" asp-action="Login">Massagem</a>
         </div>
     </header>
  
